--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
             <i class="fa-solid fa-location-dot"></i>
             <input type="search" value="Paris, Belleville" class="location__value">
         </form>
+
+    <!-- Section Infogroup -->
         <section class="Infogroup">
             <h1 class="IndexTitle">Réservez le menu qui vous convient</h1>
             <p class="Infogroup__txt">Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
@@ -44,6 +46,8 @@
                 </div>
             </div>
         </section>
+
+    <!-- Section Restaurants -->
         <section class="restaurants">
             <h2 class="IndexSubtitle">Restaurants</h2>
             <div class="restaurants__cards">
@@ -117,7 +121,7 @@
                 </div>
             </a>
             <a href="#">Mentions légales</a>
-            <a href="#">Contact</a>
+            <a href="mailto:votreadresse@mail.com">Contact</a>
         </div>
     </footer>
 </body>
