--- a/restaurants/alafrancaise.html
+++ b/restaurants/alafrancaise.html
@@ -13,114 +13,119 @@
 
 <body>
     <header class="headerMenu">
-        <div class="headerMenu__retour">
-            <a href="../index.html"><i class="fa-xl fa-solid fa-arrow-left"></i></a>
-            <img src="../assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood" class="logo">
-        </div>
-        <img src="../assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant À la française" class="restaurant__img">
+            <a href="../index.html"><i class="fa-xl fa-solid fa-arrow-left"></i></a> 
+            <img src="../assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood" class="logo"> 
     </header>
 
-    <main class="main__menu">
-        <div class="menu__card">
-            <div class="menu__card--content">
-                <h1 class="menu__card--title">À la française</h1>
-                <i class="fa-xl fa-regular fa-heart"></i>
-            </div>
-        </div>    
-        <section class="menu">
-            <h2 class="subtitle-border">ENTRÉES</h2>
-            <div class="menu__content">
-                <div class="menu__items">
-                    <h3>Tartare de poulpe acidulé</h3>
-                    <p class="menu__items--txt">Aux zestes d'orange</p>
+    <main>
+        <img src="../assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant La palette du goût" class="restaurant__img">
+        <div class="main__menu">
+            <div class="menu__card">
+                <div class="menu__card--content">
+                    <h1 class="menu__card--title">À la française</h1>
+                    <i class="fa-xl fa-regular fa-heart"></i>
                 </div>
-                <p class="menu__items--txt"><strong>25€</strong></p>
             </div>
-            <div class="menu__content">
-                <div class="menu__items">
-                    <h3>Velouté de légumes d'antan</h3>
-                    <p class="menu__items--txt">Carotte, panais, topinambour</p>
+
+        <!-- Section Entrées -->  
+            <section class="menu">
+                <h2 class="subtitle-border">ENTRÉES</h2>
+                <div class="menu__content">
+                    <div class="menu__items">
+                        <h3>Tartare de poulpe acidulé</h3>
+                        <p class="menu__items--txt">Aux zestes d'orange</p>
+                    </div>
+                    <p class="menu__items--txt"><strong>25€</strong></p>
                 </div>
-                <p class="menu__items--txt"><strong>35€</strong></p>
-            </div>
-            <div class="menu__content">
-                <div class="menu__items">
-                    <h3>Soupe à l'oignon</h3>
-                    <p class="menu__items--txt">Revisitée</p>
+                <div class="menu__content">
+                    <div class="menu__items">
+                        <h3>Velouté de légumes d'antan</h3>
+                        <p class="menu__items--txt">Carotte, panais, topinambour</p>
+                    </div>
+                    <p class="menu__items--txt"><strong>35€</strong></p>
                 </div>
-                <p class="menu__items--txt"><strong>20€</strong></p>
-            </div>
-        </section>
-        <section class="menu">
-            <h2 class="subtitle-border">PLATS</h2>
-            <div class="menu__content">
-                <div class="menu__items">
-                    <h3>Coquilles Saint-Jacques</h3>
-                    <p class="menu__items--txt">Accompagnées d'une purée de panais</p>
+                <div class="menu__content">
+                    <div class="menu__items">
+                        <h3>Soupe à l'oignon</h3>
+                        <p class="menu__items--txt">Revisitée</p>
+                    </div>
+                    <p class="menu__items--txt"><strong>20€</strong></p>
                 </div>
-                <p class="menu__items--txt"><strong>40€</strong></p>
-            </div>
-            <div class="menu__content">
-                <div class="menu__items">
-                    <h3>Magret de canard</h3>
-                    <p class="menu__items--txt">Et parmentier de pommes de terre</p>
+            </section>
+
+        <!-- Section Plats --> 
+            <section class="menu">
+                <h2 class="subtitle-border">PLATS</h2>
+                <div class="menu__content">
+                    <div class="menu__items">
+                        <h3>Coquilles Saint-Jacques</h3>
+                        <p class="menu__items--txt">Accompagnées d'une purée de panais</p>
+                    </div>
+                    <p class="menu__items--txt"><strong>40€</strong></p>
                 </div>
-                <p class="menu__items--txt"><strong>35€</strong></p>
-            </div>
-            <div class="menu__content">
-                <div class="menu__items">
-                    <h3>Pigeonneau d'Ille-et-Vilaine</h3>
-                    <p class="menu__items--txt">Sur son lit de gnocchis aux légumes</p>
+                <div class="menu__content">
+                    <div class="menu__items">
+                        <h3>Magret de canard</h3>
+                        <p class="menu__items--txt">Et parmentier de pommes de terre</p>
+                    </div>
+                    <p class="menu__items--txt"><strong>35€</strong></p>
                 </div>
-                <p class="menu__items--txt"><strong>44€</strong></p>
-            </div>
-        </section>
-        <section class="menu">
-            <h2 class="subtitle-border">DESSERTS</h2>
-            <div class="menu__content">
-                <div class="menu__items">
-                    <h3>Pétales de violettes glacés</h3>
-                    <p class="menu__items--txt">Et purée de noisettes</p>
+                <div class="menu__content">
+                    <div class="menu__items">
+                        <h3>Pigeonneau d'Ille-et-Vilaine</h3>
+                        <p class="menu__items--txt">Sur son lit de gnocchis aux légumes</p>
+                    </div>
+                    <p class="menu__items--txt"><strong>44€</strong></p>
                 </div>
-                <p class="menu__items--txt"><strong>18€</strong></p>
-            </div>
-            <div class="menu__content">
-                <div class="menu__items">
-                    <h3>Fondant au chocolat</h3>
-                    <p class="menu__items--txt">Revisité</p>
+            </section>
+            
+        <!-- Section Desserts --> 
+            <section class="menu">
+                <h2 class="subtitle-border">DESSERTS</h2>
+                <div class="menu__content">
+                    <div class="menu__items">
+                        <h3>Pétales de violettes glacés</h3>
+                        <p class="menu__items--txt">Et purée de noisettes</p>
+                    </div>
+                    <p class="menu__items--txt"><strong>18€</strong></p>
                 </div>
-                <p class="menu__items--txt"><strong>22€</strong></p>
-            </div>
-            <div class="menu__content">
-                <div class="menu__items">
-                    <h3>Millefeuille croustillant</h3>
-                    <p class="menu__items--txt">Myrtilles et pâte d'amande</p>
+                <div class="menu__content">
+                    <div class="menu__items">
+                        <h3>Fondant au chocolat</h3>
+                        <p class="menu__items--txt">Revisité</p>
+                    </div>
+                    <p class="menu__items--txt"><strong>22€</strong></p>
                 </div>
-                <p class="menu__items--txt"><strong>23€</strong></p>
-            </div>
-        </section>
-        <div class="CTA"><button class="Btn">Commander</button></div>
+                <div class="menu__content">
+                    <div class="menu__items">
+                        <h3>Millefeuille croustillant</h3>
+                        <p class="menu__items--txt">Myrtilles et pâte d'amande</p>
+                    </div>
+                    <p class="menu__items--txt"><strong>23€</strong></p>
+                </div>
+            </section>
+            <span class="CTA"><button class="Btn">Commander</button></span>
+        </div>
     </main>
+
     <footer>
         <img src="../assets/images/logo/ohmyfood.png" alt="Logo Ohmyfood" class="footer__logo">
-        <ul class="footer__list">
-            <li>
-                <a href="#">
-                    <div  class="footer__list--icon">
-                        <i class="fa-solid fa-utensils"></i>Proposer un restaurant
-                    </div>
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <div  class="footer__list--icon">
-                        <i class="fa-xs fa-solid fa-handshake-angle"></i>Devenir partenaire
-                    </div>
-                </a>
-            </li>   
-            <li><a href="#" class="footer__list--txtnormal">Mentions légales</a></li>
-            <li><a href="#" class="footer__list--txtnormal">Contact</a></li>
-        </ul>
+        <div class="footer__list">
+            <a href="#">
+                <div  class="footer__list--icon">
+                    <i class="fa-solid fa-utensils"></i>
+                    Proposer un restaurant
+                </div>
+            </a>
+            <a href="#">
+                <div  class="footer__list--icon">
+                    <i class="fa-xs fa-solid fa-handshake-angle"></i>
+                    Devenir partenaire
+                </div>
+            </a>
+            <a href="#">Mentions légales</a>
+            <a href="mailto:votreadresse@mail.com">Contact</a>
+        </div>
     </footer>
 </body>
 </html>
