--- a/restaurants/lanoteenchantee.html
+++ b/restaurants/lanoteenchantee.html
@@ -13,121 +13,126 @@
 
 <body>
     <header class="headerMenu">
-        <div class="headerMenu__retour">
             <a href="../index.html"><i class="fa-xl fa-solid fa-arrow-left"></i></a>
             <img src="../assets/images/logo/ohmyfood@2x.svg" alt="Logo Ohmyfood" class="logo">
-        </div>
-        <img src="../assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant La note enchantée" class="restaurant__img">
     </header>
 
-    <main class="main__menu">
-        <div class="menu__card">
-            <div class="menu__card--content">
-                <h1 class="menu__card--title">La note enchantée</h1>
-                <i class="fa-xl fa-regular fa-heart"></i>
-            </div>
-        </div>    
-        <section class="menu">
-            <h2 class="subtitle-border">ENTRÉES</h2>
-            <div class="menu__content">
-                <div class="menu__items">
-                    <h3>Ravioles de foie gras</h3>
-                    <p class="menu__items--txt">Accompagnées de leur crème de truffe</p>
+    <main>
+        <img src="../assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant La note enchantée" class="restaurant__img">
+        <div class="main__menu">
+            <div class="menu__card">
+                <div class="menu__card--content">
+                    <h1 class="menu__card--title">La note enchantée</h1>
+                    <i class="fa-xl fa-regular fa-heart"></i>
                 </div>
-                <p class="menu__items--txt"><strong>25€</strong></p>
             </div>
-            <div class="menu__content">
-                <div class="menu__items">
-                    <h3>Caviar osciètre</h3>
-                    <p class="menu__items--txt">Sur blini à la farine de blé noir</p>
+        
+        <!-- Section Entrées --> 
+            <section class="menu">
+                <h2 class="subtitle-border">ENTRÉES</h2>
+                <div class="menu__content">
+                    <div class="menu__items">
+                        <h3>Ravioles de foie gras</h3>
+                        <p class="menu__items--txt">Accompagnées de leur crème de truffe</p>
+                    </div>
+                    <p class="menu__items--txt"><strong>25€</strong></p>
                 </div>
-                <p class="menu__items--txt"><strong>35€</strong></p>
-            </div>
-            <div class="menu__content">
-                <div class="menu__items">
-                    <h3>Homard et espuma de potiron</h3>
-                    <p class="menu__items--txt">Marinés aux zestes d'orange</p>
+                <div class="menu__content">
+                    <div class="menu__items">
+                        <h3>Caviar osciètre</h3>
+                        <p class="menu__items--txt">Sur blini à la farine de blé noir</p>
+                    </div>
+                    <p class="menu__items--txt"><strong>35€</strong></p>
                 </div>
-                <p class="menu__items--txt"><strong>20€</strong></p>
-            </div>
-            <div class="menu__content">
-                <div class="menu__items">
-                    <h3>Foie gras de canard cuit entier</h3>
-                    <p class="menu__items--txt">Confiture de figue et pain toasté</p>
+                <div class="menu__content">
+                    <div class="menu__items">
+                        <h3>Homard et espuma de potiron</h3>
+                        <p class="menu__items--txt">Marinés aux zestes d'orange</p>
+                    </div>
+                    <p class="menu__items--txt"><strong>20€</strong></p>
                 </div>
-                <p class="menu__items--txt"><strong>35€</strong></p>
-            </div>
-        </section>
-        <section class="menu">
-            <h2 class="subtitle-border">PLATS</h2>
-            <div class="menu__content">
-                <div class="menu__items">
-                    <h3>Noix de coquilles Saint-Jacques</h3>
-                    <p class="menu__items--txt">Sur lit de purée de céleri-rave</p>
+                <div class="menu__content">
+                    <div class="menu__items">
+                        <h3>Foie gras de canard cuit entier</h3>
+                        <p class="menu__items--txt">Confiture de figue et pain toasté</p>
+                    </div>
+                    <p class="menu__items--txt"><strong>35€</strong></p>
                 </div>
-                <p class="menu__items--txt"><strong>40€</strong></p>
-            </div>
-            <div class="menu__content">
-                <div class="menu__items">
-                    <h3>Langoustine poêlée</h3>
-                    <p class="menu__items--txt">Purée de patate douce</p>
+            </section>
+
+        <!-- Section Plats --> 
+            <section class="menu">
+                <h2 class="subtitle-border">PLATS</h2>
+                <div class="menu__content">
+                    <div class="menu__items">
+                        <h3>Noix de coquilles Saint-Jacques</h3>
+                        <p class="menu__items--txt">Sur lit de purée de céleri-rave</p>
+                    </div>
+                    <p class="menu__items--txt"><strong>40€</strong></p>
                 </div>
-                <p class="menu__items--txt"><strong>35€</strong></p>
-            </div>
-            <div class="menu__content">
-                <div class="menu__items">
-                    <h3>Mijoté de queue de bœuf</h3>
-                    <p class="menu__items--txt">Et riz sauvage aux zestes de citron</p>
+                <div class="menu__content">
+                    <div class="menu__items">
+                        <h3>Langoustine poêlée</h3>
+                        <p class="menu__items--txt">Purée de patate douce</p>
+                    </div>
+                    <p class="menu__items--txt"><strong>35€</strong></p>
                 </div>
-                <p class="menu__items--txt"><strong>44€</strong></p>
-            </div>
-        </section>
-        <section class="menu">
-            <h2 class="subtitle-border">DESSERTS</h2>
-            <div class="menu__content">
-                <div class="menu__items">
-                    <h3>Macaron noisette et chocolat</h3>
-                    <p class="menu__items--txt">Glace au caramel brun et sel de Guérande</p>
+                <div class="menu__content">
+                    <div class="menu__items">
+                        <h3>Mijoté de queue de bœuf</h3>
+                        <p class="menu__items--txt">Et riz sauvage aux zestes de citron</p>
+                    </div>
+                    <p class="menu__items--txt"><strong>44€</strong></p>
                 </div>
-                <p class="menu__items--txt"><strong>18€</strong></p>
-            </div>
-            <div class="menu__content">
-                <div class="menu__items">
-                    <h3>Baba au rhum revisité</h3>
-                    <p class="menu__items--txt">Avec son coulis de citron</p>
+            </section>
+
+        <!-- Section Desserts --> 
+            <section class="menu">
+                <h2 class="subtitle-border">DESSERTS</h2>
+                <div class="menu__content">
+                    <div class="menu__items">
+                        <h3>Macaron noisette et chocolat</h3>
+                        <p class="menu__items--txt">Glace au caramel brun et sel de Guérande</p>
+                    </div>
+                    <p class="menu__items--txt"><strong>18€</strong></p>
                 </div>
-                <p class="menu__items--txt"><strong>22€</strong></p>
-            </div>
-            <div class="menu__content">
-                <div class="menu__items">
-                    <h3>Tarte au citron meringuée</h3>
-                    <p class="menu__items--txt">Déstructurée</p>
+                <div class="menu__content">
+                    <div class="menu__items">
+                        <h3>Baba au rhum revisité</h3>
+                        <p class="menu__items--txt">Avec son coulis de citron</p>
+                    </div>
+                    <p class="menu__items--txt"><strong>22€</strong></p>
                 </div>
-                <p class="menu__items--txt"><strong>23€</strong></p>
-            </div>
-        </section>
-        <div class="CTA"><button class="Btn">Commander</button></div>
+                <div class="menu__content">
+                    <div class="menu__items">
+                        <h3>Tarte au citron meringuée</h3>
+                        <p class="menu__items--txt">Déstructurée</p>
+                    </div>
+                    <p class="menu__items--txt"><strong>23€</strong></p>
+                </div>
+            </section>
+            <span class="CTA"><button class="Btn">Commander</button></span>
+        </div>
     </main>
+    
     <footer>
         <img src="../assets/images/logo/ohmyfood.png" alt="Logo Ohmyfood" class="footer__logo">
-        <ul class="footer__list">
-            <li>
-                <a href="#">
-                    <div  class="footer__list--icon">
-                        <i class="fa-solid fa-utensils"></i>Proposer un restaurant
-                    </div>
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <div  class="footer__list--icon">
-                        <i class="fa-xs fa-solid fa-handshake-angle"></i>Devenir partenaire
-                    </div>
-                </a>
-            </li>   
-            <li><a href="#" class="footer__list--txtnormal">Mentions légales</a></li>
-            <li><a href="#" class="footer__list--txtnormal">Contact</a></li>
-        </ul>
+        <div class="footer__list">
+            <a href="#">
+                <div  class="footer__list--icon">
+                    <i class="fa-solid fa-utensils"></i>
+                    Proposer un restaurant
+                </div>
+            </a>
+            <a href="#">
+                <div  class="footer__list--icon">
+                    <i class="fa-xs fa-solid fa-handshake-angle"></i>
+                    Devenir partenaire
+                </div>
+            </a>
+            <a href="#">Mentions légales</a>
+            <a href="mailto:votreadresse@mail.com">Contact</a>
+        </div>
     </footer>
 </body>
 </html>
